--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -742,78 +742,172 @@
             </section>
             <section class="main_content">
                 <div class="wrapper">
-                    <div class="popup">
-                        <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소-->
-                            <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                                <li class="swiper-slide pop01">
-                                    <a>
-                                        <div class="photo">
-                                            <img src="images/main/popup01.jpg" alt="">
-                                        </div>
-                                    </a>
-                                </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
-                            </ul>
-                            <div class="ctrl_btn">
-                                <button class="prev"><span class="blind">이전 팝업 보기</span></button>
-                                <div class="paging"></div>
-                                <button class="next"><span class="blind">다음 팝업 보기</span></button>
-                                <button class="stop"><span class="blind">팝업 정지</span></button>
-                                <button class="play"><span class="blind">팝업 재생</span></button>
-                            </div>
-                        </div><!--swiper-->
+                    <div class="ctn_wrap">
+                        <div class="popup">
+                            <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소-->
+                                <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                    <li class="swiper-slide pop01">
+                                        <a>
+                                            <div class="photo">
+                                                <img src="images/main/popup01.jpg" alt="">
+                                            </div>
+                                        </a>
+                                    </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
+                                </ul>
+                                <div class="ctrl_btn">
+                                    <button class="prev"><span class="blind">이전 팝업 보기</span></button>
+                                    <div class="paging"></div>
+                                    <button class="next"><span class="blind">다음 팝업 보기</span></button>
+                                    <button class="stop"><span class="blind">팝업 정지</span></button>
+                                    <button class="play"><span class="blind">팝업 재생</span></button>
+                                </div>
+                            </div><!--swiper-->
+                        </div>
+                        <div class="sug">
+                                <div class="tit">
+                                    <h2>시민의 목소리를 듣습니다.</h2>
+                                    <p>시민과 함께하는 우리시 정책 제안</p>
+                                </div>
+                                <div class="sug_list">
+                                    <ul>
+                                        <li class="first">
+                                            <a href="#n">
+                                                <h3>내흥동 하구둑 런닝트랙에 물품보관함 설치가 되면 좋겠습니다.</h3>
+                                                <p>안녕하세요. 최근 전국적으로 런닝붐이 일고 있으며, 군산 또한 내흥동 앞 하구둑 런닝트랙이 굉장히 잘되어있어서 너무 잘 사용중입니다. 하지만 내흥동 하구둑 러닝트랙의 경우 물품보관함이 없어 러닝 시 </p>
+                                                <span class="date">2025. 11. 28.</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <h3>선유도 자전거 대여 -- 알뜰폰 사용자는 이용이 불가합니다</h3>
+                                                <span class="date">2025. 11. 25.</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <h3>월명 종합경기장 트랙 개방관련입니다.</h3>
+                                                <span class="date">2025. 11. 25</span>
+                                            </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                        </div>
                     </div>
-                    <div class="sug"></div>
-                    <div class="mayor"></div>
+                    <div class="mayor">
+                        <div class="tit">
+                            <strong><span class="pc_only">사랑하는 군산</span> 시민 여러분, 반갑습니다</strong>
+                            <h2>군산 사람, 군산 시장 <br><span class="name">강임준</span> <span class="pc_only">입니다</span></h2>
+                        </div>
+                        <div class="more"><a href="#n"><span>열린 시장실 <span class="pc_only">바로가기</span></span></a></div>
+                        <div class="photo"><img src="images/main/mayor01.png" alt="군산시장 강임준 입니다."></div>
+                        <div class="ico_list">
+                            <ul>
+                                <li class="promise">
+                                    <a href="#n">
+                                        <div class="ico"><img src="images/main/mayorlist01.png" alt="공약확안하기 아이콘"></div>
+                                        <span>공약 확인하기</span>
+                                    </a>
+                                </li>
+                                <li class="building">
+                                    <a href="#n">
+                                        <div class="ico"><img src="images/main/mayorlist02.png" alt="공약확안하기 아이콘"></div>
+                                        <span>청사 둘러보기</span>
+                                    </a>
+                                </li>
+                                <li class="call">
+                                    <a href="#n">
+                                        <div class="ico"><img src="images/main/mayorlist03.png" alt="공약확안하기 아이콘"></div>
+                                        <span>행정전화 안내</span>
+                                    </a>
+                                </li>
+                                <li class="chart">
+                                    <a href="#n">
+                                        <div class="ico"><img src="images/main/mayorlist04.png" alt="공약확안하기 아이콘"></div>
+                                        <span>내부 조직도</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div><!--mayor-->
                 </div>
+            </section>
+            <section class="news">
+                <div class="news_wrap">
+                    <div class="tab_list">
+                        <ul>
+                            <li class="item1 active" data-tab="item1">
+                                <button>시정소식<span class="blind"></span></button>
+                            </li>
+                            <li class="item2 " data-tab="item2">
+                                <button>시험/채용<span class="blind"></span></button>
+                            </li>
+                            <li class="item3 " data-tab="item3">
+                                <button>읍면동소식<span class="blind"></span></button>
+                            </li>
+                            <li class="item4 " data-tab="item4">
+                                <button>교육안내<span class="blind"></span></button>
+                            </li>
+                            <li class="item5 " data-tab="item5">
+                                <button>행사안내<span class="blind"></span></button>
+                            </li>
+                            <li class="item6 " data-tab="item6">
+                                <button>행사일정표<span class="blind"></span></button>
+                            </li>
+                            <li class="item6 " data-tab="item6">
+                                <button>고시공고<span class="blind"></span></button>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!--news_wrap-->
             </section>
         </div>
         <footer></footer>
