1228 나비솔 디테일조정

--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -822,7 +822,10 @@
                                         <li class="first">
                                             <a href="#n">
                                                 <h3>내흥동 하구둑 런닝트랙에 물품보관함 설치가 되면 좋겠습니다.</h3>
-                                                <p>안녕하세요. 최근 전국적으로 런닝붐이 일고 있으며, 군산 또한 내흥동 앞 하구둑 런닝트랙이 굉장히 잘되어있어서 너무 잘 사용중입니다. 하지만 내흥동 하구둑 러닝트랙의 경우 물품보관함이 없어 러닝 시 </p>
+                                                <p>하지만 내흥동 주민이 아니면, 하구둑에서 런닝을 하려면 차를 가지고 가야되며,
+                                                    차를 가지고 가면 생각보다 짐을 보관할 장소가 없다고 생각됩니다.
+                                                    군산시에서 하구둑 런닝트랙 쪽에 물품보관함이나 런닝에 관하여 욕심을 조금만 내신다면
+                                                    타 지역에서도 이곳으로 런닝을 하러 많이 오고, 군산 내흥동 발전에 매우 좋을것으로 예상됩니다. 한번 생각해봐주시면 감사하겠습니다.</p>
                                                 <span class="date">2025. 11. 28.</span>
                                             </a>
                                         </li>
@@ -836,6 +839,12 @@
                                             <a href="#n">
                                                 <h3>월명 종합경기장 트랙 개방관련입니다.</h3>
                                                 <span class="date">2025. 11. 25</span>
+                                            </a>
+                                        </li>
+                                        <li>
+                                            <a href="#n">
+                                                <h3>군산 선교역사관 빔프로젝터에 대하여</h3>
+                                                <span class="date">2025. 11. 23</span>
                                             </a>
                                         </li>
                                     </ul>
@@ -906,6 +915,14 @@
                                 <button>고시공고<span class="blind"></span></button>
                             </li>
                         </ul>
+                    </div>
+                    <div class="tab_ctn">
+                        <div class="tab_item item1">
+                            <h3 class="blind">시정소식</h3>
+                            <div class="list">
+                               
+                            </div>
+                        </div>
                     </div>
                 </div><!--news_wrap-->
             </section>
