--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -917,10 +917,118 @@
                         </ul>
                     </div>
                     <div class="tab_ctn">
-                        <div class="tab_item item1">
+                        <div class="tab_item item1 active">
                             <h3 class="blind">시정소식</h3>
                             <div class="list">
-                               
+                               <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소 -->
+                                    <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소 -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>2026년 노인일자리 및 사회활동 지원사업 참여자 모집 안내</h4>
+                                                <p>『2026년 노인일자리 및 사회활동 지원사업』참여자 모집을 다음과 같이 안내합니다.</p>
+                                                <span class="date">2025. 12. 05.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>군산국민체육센터 수영장 11월 수질검사 성적서 공지</h4>
+                                                <p>군산국민체육센터 수영장 11월 수질검사 성적서를 붙임과 같이 공지하오니 참고하시기 바랍니다</p>
+                                                <span class="date">2025. 12. 05.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>군산 선교역사관 민간위탁 수탁기관 선정 모집 재공고</h4>
+                                                <p>군산 선교역사관 민간위탁 수탁기관 선정 모집 재공고 1. 공고기간 및 접수기간 : 2025. 12. 24.</p>
+                                                <span class="date">2025. 12. 03.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>2025년 군산 해외 교류도시 어린이 그림 전시회 개최 안내</h4>
+                                                <p>2025년 군산 해외 교류도시 어린이 그림 전시회에 여러분을 초대 합니다. - 전시기간 : 2025. 12. 08.</p>
+                                                <span class="date">2025. 12. 03.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>2026년 군산시 학교급식 지역생산 가공품 공급업체 상반기 모집 공고</h4>
+                                                <p>전북특별자치도 및 군산시 학교급식 지원 지침에 따라 학교급식 식재료의 원활한 공급을 위하여 지역생산 농·축·수산물 가공품 공급업체를 선정하고자 다음과 같이 공고합니다. 1. 모집공고 가. 공고개요 ○ 공 고 명 : 2026년 군산시 학교</p>
+                                                <span class="date">25. 12. 02.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시정소식</strong>
+                                                <h4>2026년 1월 군산국민체육센터 수영장(성인반, 어린이반 1분기) 공지 사항 안내</h4>
+                                                <p>♣ 2026년 1월 “국민체육센터 수영장(성인반, 어린이반 1분기)” 공지사항을 아래와 같이 안내하오니 참고하시기 바랍니다. 1. 회원 가입 등록 기간 :  2026. 1. 2.(금) ~1. 7.(수)/6일간 2. 인터넷 예약 접수일 : (성인반) - 2026. 1. 5.(월) ~ 1. 6.(화) / (어린이반)- 2026. 1. 2.(금) *첨부파일 참조</p>
+                                                <span class="date">25. 12. 02.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="tab_item item2">
+                            <h3 class="blind">시험/채용</h3>
+                            <div class="list">
+                               <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소 -->
+                                    <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소 -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>군산시가족센터 신규직원 채용 공고</h4>
+                                                <p>『2026년 노인일자리 및 사회활동 지원사업』참여자 모집을 다음과 같이 안내합니다.</p>
+                                                <span class="date">25. 12. 26.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>2025년 제10회 군산시 지방임기제공무원 채용계획 공고</h4>
+                                                <p>군산국민체육센터 수영장 11월 수질검사 성적서를 붙임과 같이 공지하오니 참고하시기 바랍니다</p>
+                                                <span class="date">2025. 12. 22.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>2026년 군산시치매안심센터 프로그램 외부강사 모집 공고</h4>
+                                                <p>군산 선교역사관 민간위탁 수탁기관 선정 모집 재공고 1. 공고기간 및 접수기간 : 2025. 12. 24.</p>
+                                                <span class="date">2025. 12. 22.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>2025년 새만금시니어클럽 사회복지사(정규직) 및 노인일자리담당자, 안전전담인력(계약직)</h4>
+                                                <p>2025년 군산 해외 교류도시 어린이 그림 전시회에 여러분을 초대 합니다. - 전시기간 : 2025. 12. 08.</p>
+                                                <span class="date">2025. 12. 12.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>군산시청소년문화의집 직원 채용 공고</h4>
+                                                <p>전북특별자치도 및 군산시 학교급식 지원 지침에 따라 학교급식 식재료의 원활한 공급을 위하여 지역생산 농·축·수산물 가공품 공급업체를 선정하고자 다음과 같이 공고합니다. 1. 모집공고 가. 공고개요 ○ 공 고 명 : 2026년 군산시 학교</p>
+                                                <span class="date">25. 12. 11.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                        <li class="swiper-slide">
+                                            <a href="#n">
+                                                <strong class="cate">시험/채용</strong>
+                                                <h4>2026년 상반기 공공일자리사업 참여자 모집</h4>
+                                                <p>♣ 2026년 1월 “국민체육센터 수영장(성인반, 어린이반 1분기)” 공지사항을 아래와 같이 안내하오니 참고하시기 바랍니다. 1. 회원 가입 등록 기간 :  2026. 1. 2.(금) ~1. 7.(수)/6일간 2. 인터넷 예약 접수일 : (성인반) - 2026. 1. 5.(월) ~ 1. 6.(화) / (어린이반)- 2026. 1. 2.(금) *첨부파일 참조</p>
+                                                <span class="date">25. 12. 11.</span>
+                                            </a>
+                                        </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
