--- a/geoje/index.html
+++ b/geoje/index.html
@@ -67,7 +67,7 @@
                     <div class="gnb_wrap">
                         <div class="gnb_logo"><span class="blind">거제관광문화</span></div>
                         <ul class="depth1">
-                            <li class="open">
+                            <li class="">
                                 <a href="#n"><span>둘러보기</span></a>
                                 <div class="depth2_wrap">
                                     <div class="wrapper">
