--- a/gunsan/index.html
+++ b/gunsan/index.html
@@ -753,56 +753,56 @@
                         <div class="swiper"> <!-- 팝업의 높이와 넓이를 css에서 줄 수 있는 요소-->
                             <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup01.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup02.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup01.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup02.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup01.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup02.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup01.jpg" alt="">
                                         </div>
                                     </a>
                                 </li> <!-- 팝업 요소들 (div로 해도 상관없음)-->
                                 <li class="swiper-slide">
-                                    <a>
+                                    <a href="#n">
                                         <div class="photo">
                                             <img src="images/main/popup02.jpg" alt="">
                                         </div>
@@ -825,8 +825,10 @@
                                     <strong><span class="pc_only">사랑하는 군산</span> 시민 여러분, 반갑습니다</strong>
                                     <h2>군산 사람, 군산 시장 <br><span class="name">강임준</span> <span class="pc_only">입니다</span></h2>
                                 </div>
-                                <div class="more"><a href="#n"><span>열린 시장실</span></a></div>
-                                <div class="forgunsan"><a href="#n"><span class="pc_only">군산시가 묻는다</span></a></div>
+                                <div class="inner2">
+                                    <div class="more"><a href="#n"><span>열린 시장실</span></a></div>
+                                    <div class="forgunsan"><a href="#n"><span class="pc_only">군산시가 묻는다</span></a></div>
+                                </div>
                             </div>
                             <div class="photo"><img src="images/main/mayor01.png" alt="군산시장 강임준 입니다."></div>
                         </div>    
