260118 포트폴리오 클라이언트 수정

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                             </div>
                             <div class="right_area">
                                 <div class="list_type"><span>Graphic</span></div>
-                                <div class="list_client"><span>The Sawtooth</span></div>
+                                <div class="list_client"><span>Baton Touch</span></div>
                             </div>
                         </div>
                     </a>
