--- a/nudk/index.html
+++ b/nudk/index.html
@@ -44,6 +44,9 @@
                     <source src="images/main/visual_vd.mp4">
                 </video>
             </div>
+            <div class="scroll_down">
+                <span>scroll down</span>
+            </div>
         </section>
         <section id="about" class="about">
             <div class="tit">
@@ -66,7 +69,38 @@
                     <div class="obj_txt"><span>다시 이어지는</span></div>
                 </div>
             </div><!--obj_wrap-->
-            <p>완벽하지 않음은 결핍이 아니라 이어져 온 흔적이라고 믿습니다. <br>누덕은 그 흔적을 숨기지 않고 가장 자연스러운 모습으로 남깁니다.</p>
+            <div class="final"><p>완벽하지 않음은 결핍이 아니라 이어져 온 흔적이라고 믿습니다. <br>누덕은 그 흔적을 숨기지 않고 가장 자연스러운 모습으로 남깁니다.</p></div>
+        </section>
+        <section class="service">
+            <h2 class="blind">our service</h2>
+            <div class="wrapper">
+                <div class="arcodian_wrap">
+                    <div class="box bg01">
+                        <img src="images/main/sell.png" alt="selling">
+                        <h3>selling</h3>
+                        <p>우리가 우리 손으로 빚어낸 도자 제품을 판매합니다 <br> 일부 제품은 리사이클 제품으로, 판매 수익의 20%가 사회에 환원됩니다</p>
+                        <div class="more"><a><span>더 알아보기</span></a></div>
+                    </div>
+                    <div class="box bg02">
+                        <img src="images/main/recy.png" alt="recycling">
+                        <h3>recycling</h3>
+                        <p>깨어진 기존 제품을 새로운 형태로 빚어냅니다 <br> 깨어진 조각을 이어내어 연결된 모습으로 재탄생 시킵니다</p>
+                        <div class="more"><a><span>더 알아보기</span></a></div>
+                    </div>
+                    <div class="box bg03">
+                        <img src="images/main/cstom.png" alt="custom">
+                        <h3>custom</h3>
+                        <p>새로운 도기/자기 주문제작 및 <br> 깨어진 기존 제품을 이용해 새로운 제품으로 재창조 할 수 있습니다</p>
+                        <div class="more"><a><span>더 알아보기</span></a></div>
+                    </div>
+                    <div class="box bg04">
+                        <img src="images/main/workshop.png" alt="workshop">
+                        <h3>workshop</h3>
+                        <p>깨어진 기존 제품을 새로운 형태로 빚어냅니다 <br> 깨어진 조각을 이어내어 연결된 모습으로 재탄생 시킵니다</p>
+                        <div class="more"><a><span>더 알아보기</span></a></div>
+                    </div>
+                </div>
+            </div>
         </section>
     </main>
     <footer></footer>
