--- a/nudk/index.html
+++ b/nudk/index.html
@@ -96,7 +96,7 @@
                     <div class="box bg04">
                         <img src="images/main/workshop.png" alt="workshop">
                         <h3>workshop</h3>
-                        <p>깨어진 기존 제품을 새로운 형태로 빚어냅니다 <br> 깨어진 조각을 이어내어 연결된 모습으로 재탄생 시킵니다</p>
+                        <p>직접 작품을 만들며 체험합니다 <br> 손길이 묻어난 작품은 소장할 수도, 기부할 수도 있습니다</p>
                         <div class="more"><a><span>더 알아보기</span></a></div>
                     </div>
                 </div>
