--- a/nudk/index.html
+++ b/nudk/index.html
@@ -21,7 +21,7 @@
     <header>
         <div class="head_line"><span>신규가입 시 전제품 5% 할인 쿠폰 증정</span></div>
         <div class="gnb">
-            <div class="menu_open"><span class="blind">메뉴열기</span></div>
+            <button class="menu_open"><span class="blind">메뉴열기</span></button>
             <div class="gnb_wrap">
                 <ul>
                     <li><a href="#n"><span>ABOUT</span></a></li>
@@ -29,6 +29,7 @@
                     <li><a href="#n"><span>BOOK</span></a></li>
                     <li><a href="#n"><span>COMMUNITY</span></a></li>
                 </ul>
+                <button class="menu_close"><span class="blind">메뉴닫기</span></button>
             </div>
             <div class="util">
                 <div class="cart"><button><span>CART</span></button></div>
@@ -104,5 +105,6 @@
         </section>
     </main>
     <footer></footer>
+    <aside class="top"><button><span class="blind">위로 가기</span></button></aside>
 </body>
 </html>
