260128 거제관광 접근성 대체텍스트 채워넣음

--- a/geoje/index.html
+++ b/geoje/index.html
@@ -425,7 +425,7 @@
                 <div class="spot_wrap">
                     <div class="spot_map">
                         <div class="map">
-                            <img src="images/main/spot_map_bg.png" alt="">
+                            <img src="images/main/spot_map_bg.png" alt="거제 관광지도">
                             <div class="txt">
                                 <button class="castle" data-name="castle"><span>거제 매미성</span></button>
                                 <button class="park" data-name="park"><span>거제포로수용소유적공원 <br>&평화파크</span></button>
@@ -448,7 +448,7 @@
                                 <ul class="swiper-wrapper"> <!-- 각 팝업 콘텐츠를 감싸는 요소 -->
                                     <li class="swiper-slide"  data-name="beach">  
                                         <div class="photo">
-                                            <img src="images/main/spot_list01.jpg" alt="">
+                                            <img src="images/main/spot_list01.jpg" alt="학동 흑진주 몽돌 해변의 전경">
                                             <div class="cate"><span>동부면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -460,7 +460,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="wind"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list02.jpg" alt="">
+                                            <img src="images/main/spot_list02.jpg" alt="학동 흑진주 몽돌 해변의 전경">
                                             <div class="cate"><span>남부면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -472,7 +472,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="botania"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list03.jpg" alt="">
+                                            <img src="images/main/spot_list03.jpg" alt="외도 보타니아의 전경">
                                             <div class="cate"><span>일운면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -484,7 +484,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="cape"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list04.jpg" alt="">
+                                            <img src="images/main/spot_list04.jpg" alt="공곶이와 내도의 전경">
                                             <div class="cate"><span>일운면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -496,7 +496,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="island"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list05.jpg" alt="">
+                                            <img src="images/main/spot_list05.jpg" alt="지심도의 전경">
                                             <div class="cate"><span>일운면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -508,7 +508,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="plant"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list06.jpg" alt="">
+                                            <img src="images/main/spot_list06.jpg" alt="거제 식물원의 전경">
                                             <div class="cate"><span>거제면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -520,7 +520,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="park"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list07.jpg" alt="">
+                                            <img src="images/main/spot_list07.jpg" alt="거제포로수용소유적공원의 전경">
                                             <div class="cate"><span>거제면</span></div>
                                         </div>
                                         <div class="list_tit">
@@ -532,7 +532,7 @@
                                     </li> <!-- 팝업 요소들 (div로 해도 상관없음) -->
                                     <li class="swiper-slide" data-name="castle"> 
                                         <div class="photo">
-                                            <img src="images/main/spot_list08.jpg" alt="">
+                                            <img src="images/main/spot_list08.jpg" alt="거제 매미성의 전경">
                                             <div class="cate"><span>장목면</span></div>
                                         </div>
                                         <div class="list_tit">
