260129 유나이티드
a - > button 으로 태그조정

--- a/united/index.html
+++ b/united/index.html
@@ -375,15 +375,15 @@
     <aside class="ctn_nav">
         <div class="list">
             <ul>
-                <li data-link="home" class="active"><a href="#n">HOME</a></li>
-                <li data-link="vision"><a href="#n">VISION</a></li>
-                <li data-link="partners"><a href="#n">PARTNERS</a></li>
-                <li data-link="product"><a href="#n">PRODUCT</a></li>
-                <li data-link="news"><a href="#n">NEWS</a></li>
-                <li data-link="recruit"><a href="#n">RECRUIT</a></li>
+                <li data-link="home" class="active"><button>HOME</button></li>
+                <li data-link="vision"><button>VISION</button></li>
+                <li data-link="partners"><button>PARTNERS</button></li>
+                <li data-link="product"><button>PRODUCT</button></li>
+                <li data-link="news"><button>NEWS</button></li>
+                <li data-link="recruit"><button>RECRUIT</button></li>
             </ul>
         </div>
     </aside>
-    <div class="cursor"><span>READ<br>MORE</span></div>   <!-- 마우스 커서가 될 html 요소를 코딩 (wrap 밖이 안전) -->
+    <div class="cursor"><span>READ<br>MORE</span></div> 
 </body>
 </html>
